# plutus-inbox-nfts

./: Makefile  README.md  flake.nix  hie.yaml  plutus-inbox-nfts.cabal
.github/workflows/: integrate.yaml
src/: PlutusInboxNfts.hs
src/PlutusInboxNfts/: Types.hs  Utils.hs
test/: Spec.hs  Utils.hs
test/Test/PlutusInboxNfts/: Unit.hs
test/Test/PlutusInboxNfts/Unit/: Validator.hs
